# social_touch_classification_for_artificial_skin

./: BuildTargetGestures.m  CoST_classification.m  HumanClassifier.m  featureInputsTest_21.mat  featureInputsTrain_21.mat  myNeuralNetworkFunction_20.m
SkinTemplate/: .gitignore  CMakeLists.txt
SkinTemplate/include/Tasks/: LedFeedback.h  Recon.h
SkinTemplate/src/Applications/: MainConsole.cpp  MainConsole.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SkinTemplate/src/Tasks/: LedFeedback.cpp  Recon.cpp
build-SkinTemplate-Desktop-Debug/: CMakeCache.txt  Makefile  SkinTemplate.cbp  cmake_install.cmake  cmake_uninstall.cmake  force.txt  skin
build-SkinTemplate-Desktop-Debug/include/Tasks/: moc_LedFeedback.cxx  moc_LedFeedback.cxx_parameters  moc_Recon.cxx  moc_Recon.cxx_parameters
build-SkinTemplate-Desktop-Debug/src/Applications/: moc_MainConsole.cxx_parameters  moc_mainwindow.cxx  moc_mainwindow.cxx_parameters
build-SkinTemplate-Desktop-Default/: CMakeCache.txt  Makefile  SkinTemplate.cbp  cmake_install.cmake  cmake_uninstall.cmake  skin  ui_mainwindow.h
build-SkinTemplate-Desktop-Default/include/Tasks/: moc_LedFeedback.cxx_parameters  moc_Recon.cxx_parameters
build-SkinTemplate-Desktop-Default/src/Applications/: moc_MainConsole.cxx  moc_MainConsole.cxx_parameters  moc_mainwindow.cxx_parameters
